# aula_06_a_10

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/aula_07/: etl.py  main.py
src/aula_08/: etl.py  pipeline.py  utils_log.py
src/aula_09/: exemplo.py  logging_exemplo_erros.py  utils_log.py
src/aula_12/: main.py
src/desafios/: desafio_07.py
