[project]
name = "bootcamp-python-6-a-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Figueiredo",email = "samuel.lobo2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blue (>=0.9.1,<0.10.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""
